[package]
name = "quincy-client"
description = "QUIC-based VPN - Client binary"
readme = "../README.md"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "quincy-client"
path = "src/bin/main.rs"

[lib]
name = "quincy_client"
path = "src/lib.rs"

[features]
default = ["offload", "jemalloc"]
offload = ["quincy/offload"]
jemalloc = ["quincy/jemalloc"]
route-manager = ["quincy/route-manager"]

[dependencies]
quincy = { workspace = true }

# Configuration
clap = { workspace = true }

# Utils
# anyhow removed - using quincy::error::Result instead

# Tokio
tokio = { workspace = true }

# Tracing/Logging
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
async-trait = { workspace = true }

# Tokio
futures = { workspace = true }

# Quinn
quinn = { workspace = true }

# Networking
ipnet = { workspace = true }
