[package]
name = "quincy"
description = "QUIC-based VPN - Core library"
readme = "../README.md"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "quincy"
path = "src/lib.rs"

[features]
default = []
offload = []
jemalloc = ["jemallocator"]
route-manager = ["dep:route_manager"]

[dependencies]
# Quinn
quinn = { workspace = true }

# Interfaces and networking
tun-rs = { workspace = true }
socket2 = { workspace = true }
bytes = { workspace = true }
ipnet = { workspace = true }
route_manager = { workspace = true, optional = true }

# Tokio
tokio = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Configuration
figment = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# TLS
rustls = { workspace = true }
rustls-pemfile = { workspace = true }

# Tracing/Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nu-ansi-term = { workspace = true }

# Utils
# anyhow removed - using thiserror-based error system instead
thiserror = { workspace = true }

# Alloc
[target.'cfg(unix)'.dependencies]
jemallocator = { workspace = true, optional = true }

# WinTun
[target.'cfg(windows)'.dependencies]
wintun-bindings = { workspace = true }

[dev-dependencies]
tempfile = "3"
